--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Project Hub | Home</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="Icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="wh.jpg" type="image/x-icon">
 </head>
 <body>
     <header class="text-gray-400 bg-gray-900 body-font">
@@ -267,7 +267,7 @@
     <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
             <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
-                <img src=" https://avatars0.githubusercontent.com/u/76177740?s=200&v=4"
+                <img href="wh.jpg" >
                     class="w-12 h-12 rounded-full" />
                 <span class="ml-3 text-xl">Web Project Hub</span>
             </a>
