--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <footer class="text-gray-400 bg-gray-900 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
             <a class="flex title-font font-medium items-center md:justify-start justify-center text-white">
-                <img href="wh.jpg" >
+                <img href="wh.jpg"
                     class="w-12 h-12 rounded-full" />
                 <span class="ml-3 text-xl">Web Project Hub</span>
             </a>
